# learn-docker

docker-R/rocker/: rocker-org.desktop  (+4 more)
docker-dash-cron/: Dockerfile  Makefile  README.md  crontab  pyproject.toml
docker-dash-cron/app/: run_app.py  simple_script.py
docker-kaggle/: jstreet_docker.txt  kaggle_docker_container.txt
docker-other-examples/: Docker_tutorial.txt  docker-compose.yml
docker-python/: example.Dockerfile  example2.Dockerfile  multistage.Dockerfile
docs/: docker-hello-world-container.txt  docker_commands.txt  docker_common_errors.txt  docker_install_uninstall.txt  docker_notes.txt  docker_tips_and_tricks.txt
links/: Chapter 8 Docker Overview & Installation | The Shiny AWS Book.desktop  Developing inside a container on a remote Docker host - Stack Overflow.desktop  Dockerized Python Development Environment - Setup Tutorial - Google Docs.desktop  R Docker tutorial by ropenscilabs.desktop  docker - Open Containers in Remote SSH Hosts using VSCode - Stack Overflow.desktop  docker - VS Code "Attach Visual Studio Code" to remote container error - Stack Overflow.desktop  docker-science\cookiecutter-docker-science: Cookiecutter template for data scientists working with Docker containers.desktop  links.txt  medoidai\dockerized-environments-deploy-tool: Infrastructure for building and managing dockerized environments using an easy to use deploy tool..desktop  medoidai\project-docker-files: This repository contains docker files from our projects..desktop  talks\data-science-workflows-using-docker-containers at master · alysivji\talks.desktop  (+2 more)
(+20 files in other folders)
